Un petit coup de polish...
OSS 117 : Vous voyez l'automobile derrière moi ?
Larmina : Oui...
OSS 117 : Ça fait un petit moment que je l'observe..
Larmina : Eh bien ?
OSS 117 : Eh bien, elle est absolument impeccable.. C'est quand même bien mieux une voiture propre, non ? À l'occasion, je vous mettrai un petit coup de polish.

--- a/src/main/webapp/resources/css/angular-toggle-switch.css
+++ b/src/main/webapp/resources/css/angular-toggle-switch.css
@@ -5,7 +5,7 @@
     text-align: left;
     overflow: hidden;
     line-height: 8px;
-    min-width: 100px;
+    min-width: 200px; /* default : 100px */
 }
 
 .toggle-switch.disabled > div > span.knob {
